@@ -543,7 +543,6 @@ var errorSchema = `{
             }
         }
     },
-    "required": ["timestamp"],
     "anyOf": [
         {
             "required": ["exception"]
