@@ -1,5 +1,0 @@
-{
-    "exception": {
-        "message": "SyntaxError: Something!"
-    }
-}
