@@ -8,7 +8,6 @@
     },
     "errors": [
         {
-            "timestamp": "2017-05-09T15:04:05.999999Z",
             "exception": {
                 "message": ""
             }
