@@ -10,8 +10,7 @@
         {
             "id": "945254c5-67a5-417e-8a4e-aa29efcbfb79",
             "type": "request",
-            "duration": 32.592981,
-            "timestamp": "2017-05-09T15:04:05.999999Z"
+            "duration": 32.592981
         }
     ],
     "user": {
